tests/negative/MicroJuvix/WrongReturnType.mjuvix
module WrongReturnType;

axiom B : Type;
inductive A {
c : B;
};

end;
